--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,11 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('com.fasterxml.jackson.core:jackson-databind')
-	runtime('com.h2database:h2')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile 'org.springframework.boot:spring-boot-starter-web'
+	compile 'com.fasterxml.jackson.core:jackson-databind'
+	compile 'com.google.apis:google-api-services-youtube:v3-rev205-1.25.0'
+	compile 'com.google.api-client:google-api-client:1.25.0'
+	compile 'com.google.oauth-client:google-oauth-client-jetty:1.25.0'
+	runtime 'com.h2database:h2'
+	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
