--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 /build/
 !gradle/wrapper/gradle-wrapper.jar
 
+### Secrets ###
+src/main/resources/client_secret.json
+
 ### STS ###
 .apt_generated
 .classpath
