YoutubeManager now gets environment specific credentials from active profile application.properties.  SPRING_PROFILES_ACTIVE env var can be used to set active profiles, if not specified, set dev as the default for test tasks in build.gradle.  Added a ConfigManager to centralize getting environment vars from application-<>.properties

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 !gradle/wrapper/gradle-wrapper.jar
 
 ### Secrets ###
-src/main/resources/client_secret.json
+src/main/resources/client_secret*.json
 
 ### STS ###
 .apt_generated
