Set dev as default profile for bootRun task. Add RestAssured and json validator for testing REST APIs. Add rest api tests for VideoController Minor cleanup for YoutubeManager

--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,10 @@ tasks.withType(Test) {
     environment SPRING_PROFILES_ACTIVE: environment.SPRING_PROFILES_ACTIVE ?: "dev"
 }
 
+bootRun {
+    environment SPRING_PROFILES_ACTIVE: environment.SPRING_PROFILES_ACTIVE ?: "dev"
+}
+
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'com.fasterxml.jackson.core:jackson-databind'
@@ -72,5 +76,7 @@ dependencies {
     compile 'com.google.api-client:google-api-client:1.25.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.25.0'
     runtime 'com.h2database:h2'
+    testCompile 'io.rest-assured:rest-assured:3.0.0'
+    testCompile 'io.rest-assured:json-schema-validator:3.0.0'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
