Set test tasks to use JUnit 5 correctly, fix VideoControllerTest

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,20 @@ repositories {
 tasks.withType(Test) {
     reports.html.setDestination(file("${reporting.baseDir}/${name}"))
     environment SPRING_PROFILES_ACTIVE: environment.SPRING_PROFILES_ACTIVE ?: "dev"
+    // Enable JUnit 5
+    useJUnitPlatform()
+    testLogging {
+        events 'PASSED', 'FAILED', 'SKIPPED'
+    }
+    afterSuite { desc, result ->
+        if (!desc.parent) {
+            println "\nTest result: ${result.resultType}"
+            println "Test summary: ${result.testCount} tests, " +
+                    "${result.successfulTestCount} succeeded, " +
+                    "${result.failedTestCount} failed, " +
+                    "${result.skippedTestCount} skipped"
+        }
+    }
 }
 
 bootRun {
@@ -82,4 +96,5 @@ dependencies {
         exclude group:'junit'
     }
     testCompile 'org.junit.jupiter:junit-jupiter-api'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine'
 }
