--- a/build.gradle
+++ b/build.gradle
@@ -83,8 +83,13 @@ bootRun {
     environment SPRING_PROFILES_ACTIVE: environment.SPRING_PROFILES_ACTIVE ?: "dev"
 }
 
+ext {
+    springCloudVersion = 'Finchley.SR1'
+}
+
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.cloud:spring-cloud-starter-openfeign'
     compile 'com.fasterxml.jackson.core:jackson-databind'
     compile 'com.google.apis:google-api-services-youtube:v3-rev205-1.25.0'
     compile 'com.google.api-client:google-api-client:1.25.0'
@@ -97,4 +102,10 @@ dependencies {
     }
     testCompile 'org.junit.jupiter:junit-jupiter-api'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
