--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,7 @@ ext {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
     compile 'com.fasterxml.jackson.core:jackson-databind'
     compile 'com.google.apis:google-api-services-youtube:v3-rev205-1.25.0'
     compile 'com.google.api-client:google-api-client:1.25.0'
@@ -101,6 +102,7 @@ dependencies {
         exclude group:'junit'
     }
     testCompile 'org.junit.jupiter:junit-jupiter-api'
+    testCompile 'io.specto:hoverfly-java:0.11.0'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine'
 }
 
