--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,1 @@
-youtube-service.ribbon.listOfServers=localhost:8081,localhost:8082
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
