Remove https as elastic beanstalk can't support https with just this

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,2 @@
 server.port=5000
-eureka.client.serviceUrl.defaultZone=http://yrandom-eureka-naming-server.ap-southeast-1.elasticbeanstalk.com//eureka
-server.ssl.key-store=keystore.p12
-server.ssl.key-store-password=yrandom123
-server.ssl.keyStoreType=PKCS12
-server.ssl.keyAlias=tomcat
+eureka.client.serviceUrl.defaultZone=http://yrandom-eureka-naming-server.ap-southeast-1.elasticbeanstalk.com/eureka
