--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,2 @@
+server.port=5000
 eureka.client.serviceUrl.defaultZone=http://yrandom-eureka-naming-server.ap-southeast-1.elasticbeanstalk.com//eureka
