Set up deployments via gradle-aws-plugin. Enable cors for yandom.herokuapp.com

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ jobs:
     - stage: Build
       script: ./gradlew build
     - stage: Deploy
-      script: ./gradlew deployStaging
+      script: ./gradlew awsEbMigrateEnvironment
